--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projectdop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://NikolayPasyuk.github.io/project_Ignat",
+  "homepage": "https://NikolayPasyuk.github.io/playing-cards",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
